--- a/styles.css
+++ b/styles.css
@@ -40,19 +40,28 @@ body {
   list-style-type: none;
 }
 
-.todo-list > li {
+.todo {
+  display: flex;
+  justify-content: space-between;
+
   background-color: white;
   border-radius: 10px;
-  height: 70px;
   font-size: 18px;
 
+  padding: 30px;
+  padding-left: 15px;
 
-  padding: 5px;
-  padding-top: 20px;
+  border: 1px solid black;
 
   margin-bottom: 15px;
   margin-left: 20px;
   margin-right: 20px;
+}
+
+.todo > label {
+  align-self: flex-start;
+  flex: 1;
+  margin-left: 5px;
 }
 
 .sub-item{
