add icons and CSS styling for "delete todo" button

--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,20 @@ body {
   margin-left: 5px;
 }
 
+.delete-todo {
+  font-size: 18px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.delete-todo:hover {
+  text-shadow: 3px 2px 10px #aeb5c6;
+  transform: scale(1.15)
+
+}
+
 .sub-item{
   margin-top: 5px;
   list-style-type: disc;
